# trading_project

./: .gitignore  README.md  etl.py  pyproject.toml
app/: dash.py  etl.py
